--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,29 +31,23 @@ jobs:
         run: |
           docker push ${{ secrets.AWS_ECR_REPOSITORY }}:latest
 
-  update-gitops:
-    needs: build-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+update-gitops:
+  needs: build-push
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
 
-      - name: Update Kubernetes Deployment in Git
-        run: |
-          sed -i 's|image: .*|image: ${{ secrets.AWS_ECR_REPOSITORY }}:latest|g' kubernetes/deployment.yaml
+    - name: Set up Git config with PAT
+      run: |
+        git config --global user.email "ci-bot@github.com"
+        git config --global user.name "CI Bot"
+        git remote set-url origin https://github.com/${{ github.repository }}
+        git config --global credential.helper 'store'
 
-          # Check if there are changes to commit
-          git diff --exit-code kubernetes/deployment.yaml || echo "Changes detected in deployment.yaml"
-
-          # Configure Git user for commit
-          git config --global user.email "ci-bot@github.com"
-          git config --global user.name "CI Bot"
-
-          # Add changes to the staging area
-          git add kubernetes/deployment.yaml
-
-          # Commit changes if there are any, else create an empty commit to keep the flow green
-          git diff --quiet kubernetes/deployment.yaml || git commit -m "Update deployment image to latest"
-          git commit --allow-empty -m "No changes in deployment.yaml, workflow completed"
-
-          git push
+    - name: Update Kubernetes Deployment in Git
+      run: |
+        sed -i 's|image: .*|image: ${{ secrets.AWS_ECR_REPOSITORY }}:latest|g' kubernetes/deployment.yaml
+        git add kubernetes/deployment.yaml
+        git diff --quiet kubernetes/deployment.yaml || git commit -m "Update deployment image to latest"
+        git push https://github.com/${{ github.repository }} HEAD:main
